WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12196
SVGPatternElement should not be locatable
https://bugs.webkit.org/show_bug.cgi?id=12196
Summary
SVGPatternElement should not be locatable
Rob Buis
Reported
2007-01-10 05:55:44 PST
Looking at
http://www.w3.org/TR/SVG11/pservers.html#InterfaceSVGPatternElement
it is clear it does not derive from SVGLocatable, yet we do that in the sources. Fix this.
Attachments
First attempt
(3.32 KB, patch)
2007-01-10 05:58 PST
,
Rob Buis
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2007-01-10 05:58:35 PST
Created
attachment 12343
[details]
First attempt Not that important, but should still be fixed :) Cheers, Rob.
Sam Weinig
Comment 2
2007-01-10 06:26:24 PST
Comment on
attachment 12343
[details]
First attempt r=me!
Rob Buis
Comment 3
2007-01-10 06:35:03 PST
Landed in
r18739
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug