        Reviewed by Sam.

http://bugs.webkit.org/show_bug.cgi?id=12196
        SVGPatternElement should not be locatable

        Replace SVGStyledLocatableElement derivation with
        SVGStyledElement.



Canonical link: https://commits.webkit.org/15751@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18739 268f45cc-cd09-0410-ab3c-d52691b4dbfc